--- a/react-task-tracker/src/index.css
+++ b/react-task-tracker/src/index.css
@@ -61,8 +61,12 @@ body {
   cursor: pointer;
 }
 
-.task.reminder {
+.task.remainder.true {
   border-left: 5px solid green;
+}
+
+.task.remainder.false {
+  border-left: 5px solid red;
 }
 
 .task h3 {
